--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 h2 {
     color: #00f;
     text-shadow: brown 1.5px 90deg;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 p {
@@ -15,6 +15,12 @@ p {
     padding: 12px;
 }
 
-MemberList {
-    margin: 25px 0px 25px 25px;
+ul,
+h3 {
+    margin: 10px 0px 5px 10px;
+    font-size: 30px;
+}
+
+ul a {
+    text-decoration-line: none;
 }
